appId: com.viscouspot.gitsync
---

- runFlow: ./assert.yaml
- tapOn: "GENERATE KEY"
- assertVisible: "ssh-rsa.*"
- tapOn: "ssh-rsa.*"
- runFlow: ./save_key.yaml
- assertVisible: "CONFIRM PUB KEY SAVED"
- tapOn: "CONFIRM PUB KEY SAVED"