appId: com.viscouspot.gitsync
---

- runFlow: ../assert.yaml
- runFlow:
    when: 
      notVisible: "SSH"
    commands:
      - tapOn: 
          id: "gitProviderSpinner"
      - assertVisible: "SSH"
      - tapOn: "SSH"