appId: com.viscouspot.gitsync
---

- runFlow: ./assert.yaml
- tapOn: "Documents"
- tapOn: "USE THIS FOLDER"
- assertVisible: "ALLOW"
- tapOn: "ALLOW"
- assertVisible: "Failed to clone repository!"
- assertVisible: "OK"
- tapOn: "OK"