appId: com.viscouspot.gitsync
---

- runFlow: ./assert.yaml
- tapOn: "Documents"
- tapOn:
    point: 65%,5%
- evalScript: ${output.randomDirName = Math.random()}
- inputText: ${output.randomDirName}
- assertVisible: "OK"
- tapOn: "OK"
- assertVisible: ${output.randomDirName}
- tapOn: ${output.randomDirName}
- assertVisible: "USE THIS FOLDER"
- tapOn: "USE THIS FOLDER"
- assertVisible: "ALLOW"
- tapOn: "ALLOW"