appId: com.viscouspot.gitsync
---

- runFlow: ./assert.yaml
- tapOn: "https://git.abc/xyz.git"
- inputText: "https://github.com/ViscousTests/TestObsidianVault"
- tapOn: "PULL"