appId: com.viscouspot.gitsync
---

- runFlow: ./assert.yaml
- tapOn: "https://git.abc/xyz.git"
- inputText: ${MAESTRO_SSH_CLONE_URL}
- tapOn: "PULL"